--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CPU Scheduling Algorithm Simulator</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="shortcut icon" href="./cpu.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -44,7 +45,7 @@
                         <label class="block text-sm font-medium text-blue-200 my-2">
                             <i class="fas fa-palette mr-1 text-blue-400"></i> Process Color
                         </label>
-                        <input type="color" id="processColor" class="w-full h-10 rounded-lg bg-gray-700 border border-gray-600 focus:ring-2 focus:ring-blue-500 focus:border-transparent transition duration-200" value="#3b82f6">
+                        <input type="color" id="processColor" class="w-full cursor-pointer h-10 rounded-lg bg-gray-700 border border-gray-600 focus:ring-2 focus:ring-blue-500 focus:border-transparent transition duration-200" value="#3b82f6">
                     </div>
                     
                     <div class="flex flex-wrap gap-2 mt-2 justify-center">
