--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
                                 <th class="px-4 py-3 text-left text-xs font-medium text-blue-200 uppercase">PID</th>
                                 <th class="px-4 py-3 text-left text-xs font-medium text-blue-200 uppercase">Waiting Time</th>
                                 <th class="px-4 py-3 text-left text-xs font-medium text-blue-200 uppercase">Turnaround Time</th>
+                                <th class="px-4 py-3 text-left text-xs font-medium text-blue-200 uppercase">Completion Time</th>
                             </tr>
                         </thead>
                         <tbody id="processMetricsBody" class="bg-gray-800 divide-y divide-gray-700">
